--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "alertify-js",
   "description": "AlertifyJS is a javascript framework for developing pretty browser dialogs and notifications.",
-  "version": "1.0.1",
+  "version": "1.0.1-4sh",
   "main": "build/alertify.js",
   "license": "MIT",
   "ignore": [
