--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,11 @@
   "name": "alertify-js",
   "description": "AlertifyJS is a javascript framework for developing pretty browser dialogs and notifications.",
   "version": "1.0.1-4sh",
-  "main": "build/alertify.js",
+  "main": [
+    "./build/css/alertify.css",
+    "./build/css/themes/default.css",
+    "./build/alertify.js"
+  ],
   "license": "MIT",
   "ignore": [
     ".gitignore",
